--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello Everyone</h1>
+    <p>I'm pushing my code to GITHUB.</p>
 </body>
 </html>
